# My-Python-Projects

./: Git.txt  pyproject.toml
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/pip-23.3.1-py3-none-any/pip-23.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/setuptools-69.0.2-py3-none-any/setuptools-69.0.2.dist-info/: RECORD
.local/share/virtualenv/wheel/3.10/image/1/CopyPipInstall/wheel-0.42.0-py3-none-any/wheel-0.42.0.dist-info/: RECORD
CommonPasswordChecker/: CommonPasswordChecker.py  README.md
GuessNumberGame/: GuessNumberGame.py
PasswordGenerator/: PasswordGenerator.py
QrCodeGenerator/: QrCodeGenerator.py  QrCodest.py  README.md
SentimentAnalysisBot/: README.md  SentimentAnalysisBot.py
TaxCalculator/: README.md  TaxCalculator.py
WebsiteChecker/: README.md  WebsiteChecker.py  websites.csv
convert_text_to_audio/: README.md  convert_text_to_audio.py
